@@ -1,6 +1,6 @@
 ---
 name: IPC-SRLock
-version: 0.1.54
+version: 0.1.61
 author:
   - 'Peter Flanigan, C<< <Support at RoxSoft.co.uk> >>'
 abstract: Set/reset locking semantics to single thread processes
@@ -31,7 +31,7 @@ build_requires:
 provides:
   IPC::SRLock:
     file: lib/IPC/SRLock.pm
-    version: 0.1.54
+    version: 0.1.61
   IPC::SRLock::ExceptionClass:
     file: lib/IPC/SRLock/ExceptionClass.pm
     version: 0.1.52
