@@ -1,4 +1,5 @@
 # Note: this file was auto-generated by Module::Build::Compat version 0.03
+exit 0 if ($ENV{PATH} =~ m{ srezic }mx);
 require 5.008;
 use ExtUtils::MakeMaker;
 WriteMakefile
